fix white space showing

--- a/app/assets/stylesheets/api/footer.scss
+++ b/app/assets/stylesheets/api/footer.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   background-color: black;
-  margin-top: .7em;
 }
 
 .top-footer {
